; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send_text.c_yrmcds_text_append.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send_text.c_yrmcds_text_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"append\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yrmcds_text_append(i32* %0, i8* %1, i64 %2, i8* %3, i64 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i8* %3, i8** %11, align 8
  store i64 %4, i64* %12, align 8
  store i32 %5, i32* %13, align 4
  store i32* %6, i32** %14, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @EXPAND_STR(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %17 = load i8*, i8** %9, align 8
  %18 = load i64, i64* %10, align 8
  %19 = load i8*, i8** %11, align 8
  %20 = load i64, i64* %12, align 8
  %21 = load i32, i32* %13, align 4
  %22 = load i32*, i32** %14, align 8
  %23 = call i32 @send_data(i32* %15, i32 %16, i8* %17, i64 %18, i8* %19, i64 %20, i32 0, i32 0, i32 0, i32 %21, i32* %22)
  ret i32 %23
}

declare dso_local i32 @send_data(i32*, i32, i8*, i64, i8*, i64, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @EXPAND_STR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
